[workspace]
resolver = "2"

members = [
	"bin/sozo",
	"crates/dojo/bindgen",
	"crates/dojo/core",
	"crates/dojo/macros",
	"crates/dojo/test-utils",
	"crates/dojo/types",
	"crates/dojo/utils",
	"crates/dojo/world",
	"crates/dojo/world/abigen",
	"crates/macros/merge-options",
	"crates/macros/merge-options/macro_test",
	"crates/metrics",
	"crates/sozo/scarb_interop",
	"crates/sozo/scarb_metadata_ext",
	"crates/sozo/signers",
	"crates/sozo/walnut",
	"crates/sozo/mcp",
	"examples/spawn-and-move",
	"scripts/verify_db_balances",
	"xtask/generate-test-db",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/dojoengine/dojo/"
version = "1.6.0-alpha.0"

[profile.performance]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"

[profile.profiling]
debug = true
inherits = "release"

[workspace.dependencies]
cainome = { version = "0.7.0", features = [ "abigen-rs" ] }
cainome-cairo-serde = { version = "0.2.0" }

dojo-utils = { path = "crates/dojo/utils" }

# metrics
dojo-metrics = { path = "crates/metrics" }

dojo-bindgen = { path = "crates/dojo/bindgen" }
dojo-core = { path = "crates/dojo/core" }
dojo-test-utils = { path = "crates/dojo/test-utils" }
dojo-types = { path = "crates/dojo/types" }
dojo-world = { path = "crates/dojo/world" }

# dojo-world
topological-sort = "0.2"

# torii
torii-cli = { path = "crates/torii/cli" }
torii-client = { path = "crates/torii/client" }
torii-graphql = { path = "crates/torii/graphql" }
torii-grpc = { path = "crates/torii/grpc" }
torii-indexer = { path = "crates/torii/indexer" }
torii-mcp = { path = "crates/torii/mcp" }
torii-relay = { path = "crates/torii/libp2p" }
torii-runner = { path = "crates/torii/runner" }
torii-server = { path = "crates/torii/server" }
torii-sqlite = { path = "crates/torii/sqlite/sqlite" }
torii-sqlite-types = { path = "crates/torii/sqlite/types" }
torii-typed-data = { path = "crates/torii/typed-data" }

# sozo
sozo-ops = { path = "crates/sozo/ops" }
scarb-interop = { path = "crates/sozo/scarb_interop" }
scarb-metadata-ext = { path = "crates/sozo/scarb_metadata_ext" }
sozo-signers = { path = "crates/sozo/signers" }
sozo-walnut = { path = "crates/sozo/walnut" }
sozo-mcp = { path = "crates/sozo/mcp" }

# macros
merge-options = { path = "crates/macros/merge-options" }

katana-runner = { git = "https://github.com/dojoengine/katana", rev = "f472095" }

anyhow = "1.0.89"
arbitrary = { version = "1.3.2", features = [ "derive" ] }
assert_fs = "1.1"
assert_matches = "1.5.0"
async-trait = "0.1.82"
auto_impl = "1.2.0"
base64 = "0.21.2"
bigdecimal = "0.4.1"
bytes = "1.6"

# refer to Scarb git while `cairo-lang-macro` 0.2.0 (new api) is deployed on crates.io
cairo-lang-macro = { version = "0.2.0", git = "https://github.com/software-mansion/scarb.git" }

cairo-lang-primitive-token = "1"
cairo-lang-compiler = "*"
cairo-lang-debug = "*"
cairo-lang-defs = "*"
cairo-lang-diagnostics = "*"
cairo-lang-filesystem = "*"
cairo-lang-formatter = "*"
cairo-lang-lowering = "*"
cairo-lang-parser = "*"
cairo-lang-plugins = { version = "*", features = [ "testing" ] }
cairo-lang-project = "*"
cairo-lang-semantic = "*"
cairo-lang-sierra = "*"
cairo-lang-sierra-generator = "*"
cairo-lang-sierra-to-casm = "*"
cairo-lang-starknet = "*"
cairo-lang-starknet-classes = "*"
cairo-lang-syntax = "*"
cairo-lang-test-plugin = "*"
cairo-lang-test-runner = "*"
cairo-lang-test-utils = "*"
cairo-lang-utils = "*"
cairo-vm = "1.0.0-rc4"
camino = { version = "1.1.2", features = [ "serde1" ] }
chrono = { version = "0.4.24", features = [ "serde" ] }
clap = { version = "4.5.16", features = [ "derive", "env" ] }
clap-verbosity-flag = "2.0.1"
clap_complete = "4.3"
colored = "2.0.0"
colored_json = "3.2.0"
console = "0.15.7"
convert_case = "0.6.0"
crypto-bigint = { version = "0.5.3", features = [ "serde" ] }
data-url = "0.3"
derive_more = "0.99.17"
dunce = "1"
flate2 = "1.0.35"
fluent-uri = "0.3"
futures = "0.3.30"
futures-util = "0.3.30"
hashlink = "0.9.1"
hex = "0.4.3"
hex-literal = "0.4.1"
http = "0.2.9"
image = "0.25.2"
indexmap = "2.2.5"
indoc = "1.0.7"
itertools = "0.12.1"
jsonrpsee = { version = "0.16.2", default-features = false }
lazy_static = "1.4.0"
log = "0.4.21"
metrics = "0.23.0"
num-bigint = "0.4.3"
num-traits = { version = "0.2", default-features = false }
once_cell = "1.0"
parking_lot = "0.12.1"
postcard = { version = "1.0.10", features = [ "use-std" ], default-features = false }
pretty_assertions = "1.2.1"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.3"
reqwest = { version = "0.11.27", features = [ "json", "rustls-tls" ], default-features = false }
rpassword = "7.2.0"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
salsa = "0.16.1"

# version 2.11.4+nightly-2025-05-08
scarb-metadata = { git = "https://github.com/software-mansion/scarb", rev="4fdeb7810" }
scarb-ui = { git = "https://github.com/software-mansion/scarb", rev="4fdeb7810" }

semver = "1.0.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
serde_with = "3.11.0"
similar-asserts = "1.5.0"
smol_str = { version = "0.3", features = [ "serde" ] }
spinoff = "0.8.0"
sqlx = { version = "0.8.2", features = [ "chrono", "macros", "regexp", "runtime-async-std", "runtime-tokio", "sqlite", "uuid" ] }
#starknet_api = "0.11.0"
starknet_api = { git = "https://github.com/dojoengine/sequencer", rev = "802c5dc" }
strum = "0.25"
strum_macros = "0.25"
tempfile = "3.9.0"
test-log = "0.2.11"
thiserror = "1.0.32"
tokio = { version = "1.39.2", features = [ "full" ] }
tokio-util = "0.7.12"
toml = "0.8"
tower = "0.4.13"
tower-http = "0.4.4"
tracing = { version = "0.1.38", features = [ "log" ], default-features = false }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter", "json" ] }
url = { version = "2.4.0", features = [ "serde" ] }
walkdir = "2.5.0"
# TODO: see if we still need the git version
ipfs-api-backend-hyper = { git = "https://github.com/ferristseng/rust-ipfs-api", rev = "af2c17f7b19ef5b9898f458d97a90055c3605633", features = [ "with-hyper-rustls", "with-send-sync" ] }
mime_guess = "2.0"

# server
hyper = "1.5"
warp = "0.3"

# gRPC
prost = "0.12"
tonic = { version = "0.11", features = [ "gzip", "tls", "tls-roots", "tls-webpki-roots" ] }
tonic-build = "0.11"
tonic-reflection = "0.11"
tonic-web = "0.11"

# WASM-compatible gRPC deps
tonic-web-wasm-client = "0.6.0"
wasm-prost = { version = "0.13", package = "prost" }
wasm-tonic = { version = "0.12", default-features = false, features = [ "codegen", "gzip", "prost" ], package = "tonic" }
wasm-tonic-build = { version = "0.12", default-features = false, features = [ "prost" ], package = "tonic-build" }

criterion = "0.5.1"
pprof = { version = "0.13.0", features = [ "criterion", "flamegraph" ] }

# Slot integration. Dojo don't need to manually include `account_sdk` as dependency as `slot` already re-exports it.
slot = { git = "https://github.com/cartridge-gg/slot", rev = "adac33e" }

# alloy core
alloy-primitives = { version = "0.8", default-features = false }
alloy-sol-types = { version = "0.8", default-features = false }

# alloy
alloy-contract = { version = "0.4", default-features = false }
alloy-json-rpc = { version = "0.4", default-features = false }
alloy-network = { version = "0.4", default-features = false }
alloy-provider = { version = "0.4", default-features = false }
alloy-rpc-types-eth = { version = "0.4", default-features = false }
alloy-signer = { version = "0.4", default-features = false }
alloy-transport = { version = "0.4", default-features = false }

starknet = "0.14.0"
starknet-crypto = "0.7.1"
starknet-types-core = { version = "0.1.7", features = [ "arbitrary", "hash" ] }

bitvec = "1.0.1"

# macro
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false }

[patch.crates-io]
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-debug = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-eq-solver = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-formatter = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-proc-macros = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-runnable-utils = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-runner = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-sierra-ap-change = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-sierra-gas = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-sierra-to-casm = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-sierra-type-size = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-starknet-classes = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-syntax-codegen = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-test-plugin = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-test-runner = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-test-utils = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo", rev = "64b88f06c6261ac67c6b478434c844d4af81e5a3" }
