[workspace]
resolver = "2"

members = [
	"bin/cairo-bench",
	"bin/sozo",
	"crates/dojo/bindgen",
	"crates/dojo/core",
	"crates/dojo/test-utils",
	"crates/dojo/types",
	"crates/dojo/utils",
	"crates/dojo/world",
	"crates/dojo/world/abigen",
	"crates/macros/merge-options",
	"crates/macros/merge-options/macro_test",
	"crates/metrics",
	"crates/sozo/mcp",
	"crates/sozo/scarb_interop",
	"crates/sozo/scarb_metadata_ext",
	"crates/sozo/signers",
	"crates/sozo/ui",
	"crates/sozo/walnut",
	"examples/spawn-and-move",
	"scripts/verify_db_balances",
	"xtask/generate-test-db",
]

# Since the Dojo macros is published at a different pace of the rest of the
# of the Workspace, it is excluded from the workspace and must be released
# on its own before bumping Dojo.
# The proc macros is expected to change less often than the rest of the Workspace.
exclude = [
	"crates/dojo/macros",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/dojoengine/dojo/"
documentation = "https://book.dojoengine.org"
homepage = "https://dojoengine.org"
version = "1.7.2"

[profile.performance]
codegen-units = 1
incremental = false
inherits = "release"
lto = "fat"

[profile.profiling]
debug = true
inherits = "release"

[workspace.dependencies]
cainome = { version = "0.10.1", features = [ "abigen-rs" ] }
cainome-cairo-serde = { version = "0.4.1" }

dojo-utils = { path = "crates/dojo/utils" }

# metrics
dojo-metrics = { path = "crates/metrics" }

dojo-bindgen = { path = "crates/dojo/bindgen" }
dojo-core = { path = "crates/dojo/core" }
dojo-test-utils = { path = "crates/dojo/test-utils" }
dojo-types = { path = "crates/dojo/types", version = "1.7.2" }
dojo-world = { path = "crates/dojo/world" }

# sozo
scarb-interop = { path = "crates/sozo/scarb_interop" }
scarb-metadata-ext = { path = "crates/sozo/scarb_metadata_ext" }
sozo-mcp = { path = "crates/sozo/mcp" }
sozo-ops = { path = "crates/sozo/ops" }
sozo-signers = { path = "crates/sozo/signers" }
sozo-ui = { path = "crates/sozo/ui" }
sozo-walnut = { path = "crates/sozo/walnut" }

# macros
merge-options = { path = "crates/macros/merge-options" }

# On the branch to support rpc 0.9 (incl starknet bump)
katana-runner = { git = "https://github.com/dojoengine/katana", rev = "eba352a" }

anyhow = "1.0.89"
arbitrary = { version = "1.3.2", features = [ "derive" ] }
assert_fs = "1.1"
assert_matches = "1.5.0"
async-trait = "0.1.82"
auto_impl = "1.2.0"
base64 = "0.21.2"
bigdecimal = "0.4.1"
bytes = "1.6"
cairo-lang-starknet-classes = "2.12.2"
camino = { version = "1.1.2", features = [ "serde1" ] }
chrono = { version = "0.4.24", features = [ "serde" ] }
clap = { version = "4.5.16", features = [ "derive", "env", "string" ] }
clap-verbosity-flag = "2.0.1"
clap_complete = "4.3"
colored = "2.0.0"
colored_json = "3.2.0"
console = "0.15.7"
convert_case = "0.6.0"
crypto-bigint = { version = "0.5.3", features = [ "serde" ] }
data-url = "0.3"
derive_more = "0.99.17"
dunce = "1"
flate2 = "1.0.35"
fluent-uri = "0.3"
futures = "0.3.30"
futures-util = "0.3.30"
hashlink = "0.9.1"
hex = "0.4.3"
hex-literal = "0.4.1"
http = "0.2.9"
image = "0.25.2"
indexmap = "2.2.5"
indoc = "1.0.7"
itertools = "0.12.1"
jsonrpsee = { version = "0.16.2", default-features = false }
lazy_static = "1.4.0"
log = "0.4.21"
metrics = "0.23.0"
num-bigint = "0.4.3"
num-traits = { version = "0.2", default-features = false }
once_cell = "1.0"
parking_lot = "0.12.1"
postcard = { version = "1.0.10", features = [ "use-std" ], default-features = false }
pretty_assertions = "1.2.1"
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.3"
reqwest = { version = "0.12.15", features = [ "json", "rustls-tls" ], default-features = false }
rpassword = "7.2.0"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
salsa = "0.16.1"
scarb-metadata = "1.15.1"
semver = "1.0.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0.142", features = [ "arbitrary_precision" ] }
serde_with = "3.11.0"
similar-asserts = "1.5.0"
smol_str = { version = "0.3", features = [ "serde" ] }
spinoff = "0.8.0"
sqlx = { version = "0.8.2", features = [ "chrono", "macros", "regexp", "runtime-async-std", "runtime-tokio", "sqlite", "uuid" ] }
#starknet_api = "0.11.0"
starknet_api = { git = "https://github.com/dojoengine/sequencer", rev = "802c5dc" }
strum = "0.25"
strum_macros = "0.25"
tempfile = "3.9.0"
test-log = "0.2.11"
thiserror = "1.0.32"
tokio = { version = "1.39.2", features = [ "full" ] }
tokio-util = "0.7.12"
toml = "0.8"
tower = "0.4.13"
tower-http = "0.4.4"
tracing = { version = "0.1.38", features = [ "log" ], default-features = false }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.20", features = [ "env-filter", "json" ] }
url = { version = "2.4.0", features = [ "serde" ] }
walkdir = "2.5.0"
# TODO: see if we still need the git version
ipfs-api-backend-hyper = { git = "https://github.com/ferristseng/rust-ipfs-api", rev = "af2c17f7b19ef5b9898f458d97a90055c3605633", features = [ "with-hyper-rustls", "with-send-sync" ] }
mime_guess = "2.0"

# server
hyper = "1.5"
warp = "0.3"

# Slot integration. Dojo don't need to manually include `account_sdk` as dependency as `slot` already re-exports it.
slot-core = { git = "https://github.com/cartridge-gg/slot", branch = "compartmentalization" }
slot-session = { git = "https://github.com/cartridge-gg/slot", branch = "compartmentalization" }

starknet = "0.17"
starknet-crypto = "0.8"
starknet-types-core = { version = "0.2", features = [ "arbitrary", "hash" ] }

bitvec = "1.0.1"
