[package]
name = "katana-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Katana command line interface."

[dependencies]
env_logger = "0.10.0"
log.workspace = true
tokio = { version = "1.16", features = ["full"] }
katana-core = { path = "../katana-core" }
katana-rpc = { path = "../katana-rpc" }

[dev-dependencies]
assert_matches = "1.5.0"

[[bin]]
name = "katana"
path = "src/cli.rs"
