[package]
name = "katana-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Katana command line interface."

[dependencies]
env_logger = "0.10.0"
log.workspace = true
tokio.workspace = true
katana-core = { path = "../katana-core" }
katana-rpc = { path = "../katana-rpc" }
starknet_api.workspace = true
clap = { version = "4.2.5", features = ["derive"] }
yansi = "0.5.1"

[dev-dependencies]
assert_matches = "1.5.0"

[[bin]]
name = "katana"
path = "src/cli.rs"
