[package]
name = "katana-rpc"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Katana RPC Implementation."

[dependencies]
blockifier = { git = "https://github.com/starkware-libs/blockifier" }
hex = { version = "0.4.3", default-features = false }
jsonrpsee = { version = "0.16.2", features = ["full"] }
katana-core = { path = "../katana-core" }
serde.workspace = true
starknet.workspace = true
starknet_api = { git = "https://github.com/starkware-libs/starknet-api", rev = "0029ffe" }
thiserror.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
tokio.workspace = true