[package]
name = "katana-rpc"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Katana RPC Implementation."

[dependencies]
anyhow = "1.0.40"
blockifier.workspace = true
cairo-lang-starknet.workspace = true
tokio.workspace = true
hex = { version = "0.4.3", default-features = false }
jsonrpsee = { version = "0.16.2", features = ["full"] }
katana-core = { path = "../katana-core" }
serde.workspace = true
starknet.workspace = true
starknet_api.workspace = true
thiserror.workspace = true
serde_json = "1.0.96"

[dev-dependencies]
assert_matches = "1.5.0"
tokio.workspace = true
url = "2.3.1"