[package]
edition = "2021"
name = "benches"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap_builder = "4.4.6"
proptest = "1.3.1"
reqwest = { version = "0.11.18", features = [ "blocking", "json", "rustls-tls" ], default-features = false }

katana-core = { path = "../katana/core" }
katana-runner.workspace = true

anyhow.workspace = true
futures.workspace = true
hex.workspace = true
lazy_static.workspace = true
sozo = { path = "../../bin/sozo" }
starknet.workspace = true
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.111"

[features]
default = ["benchmarks"]
benchmarks = ["skip-katana-benchmarks", "skip-gas-benchmarks"]
skip-katana-benchmarks = []
skip-gas-benchmarks = []