[package]
edition = "2021"
name = "benches"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap_builder = "4.4.6"
reqwest = { workspace = true, features = [ "blocking", "json", "rustls-tls" ], default-features = false }

katana-core = { path = "../katana/core" }
katana-runner.workspace = true

anyhow.workspace = true
clap.workspace = true
dojo-lang.workspace = true
dojo-world.workspace = true
futures.workspace = true
hex.workspace = true
lazy_static.workspace = true
scarb.workspace = true
serde = { workspace = true, features = [ "derive" ] }
serde_json.workspace = true
sozo = { path = "../../bin/sozo" }
sozo-ops.workspace = true
starknet.workspace = true
tokio.workspace = true

[dev-dependencies]
proptest = "1.3.1"

[features]
default = [ "skip-benchmarks" ]
skip-benchmarks = [ "skip-gas-benchmarks", "skip-katana-benchmarks" ]
skip-gas-benchmarks = [  ]
skip-katana-benchmarks = [  ]

[package.metadata.cargo-udeps.ignore]
# proptest is needed when `skip-benchmarks` feature is turned off
# since it enabled by default and there isn't a good way to make it
# optional ignore it manually from udeps
development = [ "proptest" ]
