[package]
name = "bevy_dojo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
apibara-core = { git = "https://github.com/apibara/dna", optional = true }
apibara-sdk = { git = "https://github.com/apibara/dna", optional = true }
bevy = { version = "0.10", default-features = false }
bevy-tokio-tasks = "0.10"
tokio-stream = "0.1"
tonic = "0.9.2"
prost = "0.11"

[dev-dependencies]
chrono = "0.4"

[features]
default = ["indexer"]
indexer = ["apibara-core", "apibara-sdk"]

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["indexer"]
