[package]
name = "cairo-lang-dojo"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Dojo capabilities and utilities on top of Starknet."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0", features = ["derive"] }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2" }
cairo-lang-formatter = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2" }
cairo-lang-parser = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2" }
cairo-lang-plugins = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2" }
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2" }
indoc.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
smol_str.workspace = true

[dev-dependencies]
env_logger.workspace = true
cairo-lang-semantic = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2", features = ["testing"] }
cairo-lang-test-utils = { git = "https://github.com/starkware-libs/cairo.git", rev = "v1.0.0-alpha.2" }
test-case = "2.2.2"
test-case-macros = "2.2.2"
test-log.workspace = true

[[bin]]
name = "dojo-compile"
path = "src/cli.rs"
